dataset/contracts/failed_build/Smart_Contract_for_Digital_Identity_Verification_0.txt
 [1/*] Building cargo project
[1m[32m   Compiling[0m Lending v0.1.0 (/tmp/cargo-contract_0RYoCY)
[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[0m[1m[38;5;9merror[E0277][0m[0m[1m: the trait bound `IdentityInfo: Default` is not satisfied[0m
[0m    [0m[0m[1m[38;5;12m--> [0m[0m/workspaces/ink-jet/dataset/Test-Cargo/lib.rs:69:61[0m
[0m     [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m69[0m[0m   [0m[0m[1m[38;5;12m|[0m[0m [0m[0m            let mut identity = self.identities.get(account).unwrap_or_default();[0m
[0m     [0m[0m[1m[38;5;12m| [0m[0m                                                            [0m[0m[1m[38;5;9m^^^^^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mthe trait `Default` is not implemented for `IdentityInfo`[0m
[0m     [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;10mnote[0m[0m: required by a bound in `Option::<T>::unwrap_or_default`[0m
[0m    [0m[0m[1m[38;5;12m--> [0m[0m/home/codespace/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:1006:12[0m
[0m     [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1004[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    pub fn unwrap_or_default(self) -> T[0m
[0m     [0m[0m[1m[38;5;12m| [0m[0m           [0m[0m[1m[38;5;12m-----------------[0m[0m [0m[0m[1m[38;5;12mrequired by a bound in this associated function[0m
[0m[1m[38;5;12m1005[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    where[0m
[0m[1m[38;5;12m1006[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m        T: Default,[0m
[0m     [0m[0m[1m[38;5;12m| [0m[0m           [0m[0m[1m[38;5;10m^^^^^^^[0m[0m [0m[0m[1m[38;5;10mrequired by this bound in `Option::<T>::unwrap_or_default`[0m
[0m[1m[38;5;14mhelp[0m[0m: consider annotating `IdentityInfo` with `#[derive(Default)]`[0m
[0m     [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m16[0m[0m   [0m[0m[38;5;10m+ [0m[0m    [0m[0m[38;5;10m#[derive(Default)][0m
[0m[1m[38;5;12m17[0m[0m   [0m[0m[1m[38;5;12m| [0m[0m    pub struct IdentityInfo {[0m
[0m     [0m[0m[1m[38;5;12m|[0m

[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[0m[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[36m    Building[0m [=======================> ] 124/125: Lending(bin)                                    
[K[1m[31merror[0m[1m:[0m could not compile `Lending` (bin "Lending") due to preERROR: command ["/home/codespace/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo", "build", "--color=always", "--target=wasm32-unknown-unknown", "-Zbuild-std=core,alloc", "--no-default-features", "--release", "--target-dir=/workspaces/ink-jet/dataset/Test-Cargo/target/ink", "--features", "ink/ink-debug"] exited with code 101
